--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.5.3",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "router": "^1.3.3",
